add working server

--- a/about.html
+++ b/about.html
@@ -9,5 +9,11 @@
   <h1>About</h1>
   <p>This is the about page</p>
   <p>Here you will learn all about what we're all about</p>
+  <ul>
+    <li><a href="/index">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/busted">Broken Page</a></li>
+  </ul>
 </body>
 </html>
