--- a/contact.html
+++ b/contact.html
@@ -3,12 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>Contact</title>
 </head>
 <body>
   <h1>Contact</h1>
   <p>This is the Contact page</p>
   <p>Here you will learn how to contact us</p>
   <p>1800-999-2445</p>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/busted">Broken Page</a></li>
+  </ul>
 </body>
 </html>
