--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About</title>
+  <title>Home</title>
 </head>
 <body>
   <h1>Home</h1>
   <p>This is the Home page</p>
   <p>This is the main information source</p>
+  <ul>
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+    <li><a href="/busted">Broken Page</a></li>
+  </ul>
 </body>
 </html>
